--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,7 @@
 	},
 	"files": {
 		"ignoreUnknown": false,
-		"ignore": ["routeTree.gen.ts"]
+		"ignore": ["routeTree.gen.ts", "dist/"]
 	},
 	"formatter": {
 		"enabled": true,
