--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"@tanstack/router-plugin": "^1.114.3",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
-		"tailwindcss": "^4.1.4"
+		"tailwindcss": "^4.1.4",
+		"uuid": "^11.1.0"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
