--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,29 +9,38 @@
 		"test": "vitest run"
 	},
 	"dependencies": {
-		"@tailwindcss/vite": "^4.1.5",
-		"@tanstack/react-router": "^1.119.0",
+		"@tanstack/react-query": "^5.76.0",
+		"@tanstack/react-router": "^1.120.3",
 		"luxon": "^3.6.1",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
-		"uuid": "^11.1.0"
+		"uuid": "^11.1.0",
+		"zod": "^4.0.0-beta.20250505T195954"
 	},
 	"devDependencies": {
-		"@types/luxon": "^3.6.2",
-		"@tanstack/react-router-devtools": "^1.119.1",
-		"@tanstack/router-plugin": "^1.119.0",
-		"tailwindcss": "^4.1.5",
-		"@types/node": "^22.15.3",
 		"@biomejs/biome": "1.9.4",
+		"@eslint-react/eslint-plugin": "^1.49.0",
+		"@eslint/js": "^9.26.0",
+		"@tailwindcss/vite": "^4.1.6",
+		"@tanstack/react-router-devtools": "^1.120.3",
+		"@tanstack/router-plugin": "^1.120.3",
 		"@testing-library/dom": "^10.4.0",
 		"@testing-library/react": "^16.3.0",
-		"@types/react": "^19.1.2",
-		"@types/react-dom": "^19.1.3",
+		"@types/bun": "^1.2.13",
+		"@types/luxon": "^3.6.2",
+		"@types/node": "^22.15.17",
+		"@types/react": "^19.1.4",
+		"@types/react-dom": "^19.1.5",
 		"@vitejs/plugin-react": "^4.4.1",
+		"eslint": "^9.26.0",
+		"eslint-plugin-react-hooks": "^5.2.0",
 		"jsdom": "^26.1.0",
+		"tailwindcss": "^4.1.6",
 		"typescript": "^5.8.3",
-		"vite": "^6.3.4",
-		"vitest": "^3.1.2",
-		"web-vitals": "^4.2.4"
+		"typescript-eslint": "^8.32.1",
+		"vite": "^6.3.5",
+		"vite-plugin-checker": "^0.9.3",
+		"vitest": "^3.1.3",
+		"web-vitals": "^5.0.0"
 	}
 }
