--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,38 +9,44 @@
 		"test": "vitest run"
 	},
 	"dependencies": {
-		"@tanstack/react-query": "^5.76.0",
-		"@tanstack/react-router": "^1.120.3",
+		"@reduxjs/toolkit": "^2.8.2",
+		"@tanstack/react-router": "^1.120.5",
+		"immer": "^10.1.1",
 		"luxon": "^3.6.1",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
+		"react-redux": "^9.2.0",
 		"uuid": "^11.1.0",
 		"zod": "^4.0.0-beta.20250505T195954"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
 		"@eslint-react/eslint-plugin": "^1.49.0",
-		"@eslint/js": "^9.26.0",
-		"@tailwindcss/vite": "^4.1.6",
-		"@tanstack/react-router-devtools": "^1.120.3",
-		"@tanstack/router-plugin": "^1.120.3",
+		"@eslint/js": "^9.27.0",
+		"@tailwindcss/vite": "^4.1.7",
+		"@tanstack/react-router-devtools": "^1.120.6",
+		"@tanstack/router-plugin": "^1.120.5",
 		"@testing-library/dom": "^10.4.0",
 		"@testing-library/react": "^16.3.0",
 		"@types/bun": "^1.2.13",
 		"@types/luxon": "^3.6.2",
-		"@types/node": "^22.15.17",
+		"@types/node": "^22.15.19",
 		"@types/react": "^19.1.4",
 		"@types/react-dom": "^19.1.5",
 		"@vitejs/plugin-react": "^4.4.1",
-		"eslint": "^9.26.0",
-		"eslint-plugin-react-hooks": "^5.2.0",
+		"autoprefixer": "^10.4.21",
+		"babel-plugin-react-compiler": "^19.1.0-rc.2",
+		"eslint": "^9.27.0",
+		"eslint-plugin-react-hooks": "^6.0.0",
 		"jsdom": "^26.1.0",
-		"tailwindcss": "^4.1.6",
+		"postcss": "^8.5.3",
+		"react-scan": "^0.3.4",
+		"tailwindcss": "^4.1.7",
 		"typescript": "^5.8.3",
 		"typescript-eslint": "^8.32.1",
 		"vite": "^6.3.5",
 		"vite-plugin-checker": "^0.9.3",
 		"vitest": "^3.1.3",
-		"web-vitals": "^5.0.0"
+		"web-vitals": "^5.0.1"
 	}
 }
