--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
 		"luxon": "^3.6.1",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
+		"react-icons": "^5.5.0",
 		"react-redux": "^9.2.0",
 		"uuid": "^11.1.0",
 		"zod": "^4.0.0-beta.20250505T195954"
