--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,14 +11,16 @@
 	"dependencies": {
 		"@reduxjs/toolkit": "^2.8.2",
 		"@tanstack/react-router": "^1.120.5",
+		"@typescript/native-preview": "^7.0.0-dev.20250522.2",
 		"immer": "^10.1.1",
+		"latest": "^0.2.0",
 		"luxon": "^3.6.1",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
 		"react-icons": "^5.5.0",
 		"react-redux": "^9.2.0",
 		"uuid": "^11.1.0",
-		"zod": "^4.0.0-beta.20250505T195954"
+		"zod": "^3.25.20"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
@@ -29,10 +31,10 @@
 		"@tanstack/router-plugin": "^1.120.5",
 		"@testing-library/dom": "^10.4.0",
 		"@testing-library/react": "^16.3.0",
-		"@types/bun": "^1.2.13",
+		"@types/bun": "^1.2.14",
 		"@types/luxon": "^3.6.2",
-		"@types/node": "^22.15.19",
-		"@types/react": "^19.1.4",
+		"@types/node": "^22.15.21",
+		"@types/react": "^19.1.5",
 		"@types/react-dom": "^19.1.5",
 		"@vitejs/plugin-react": "^4.4.1",
 		"autoprefixer": "^10.4.21",
@@ -47,7 +49,7 @@
 		"typescript-eslint": "^8.32.1",
 		"vite": "^6.3.5",
 		"vite-plugin-checker": "^0.9.3",
-		"vitest": "^3.1.3",
+		"vitest": "^3.1.4",
 		"web-vitals": "^5.0.1"
 	}
 }
