--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
 	},
 	"dependencies": {
 		"@reduxjs/toolkit": "^2.8.2",
-		"@tanstack/react-router": "^1.120.11",
+		"@tanstack/react-router": "^1.120.13",
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"immer": "^10.1.1",
 		"latest": "^0.2.0",
@@ -20,37 +20,37 @@
 		"react-icons": "^5.5.0",
 		"react-redux": "^9.2.0",
 		"uuid": "^11.1.0",
-		"zod": "^3.25.34"
+		"zod": "^3.25.42"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
 		"@eslint-react/eslint-plugin": "^1.50.0",
 		"@eslint/js": "^9.27.0",
 		"@tailwindcss/vite": "^4.1.8",
-		"@tanstack/react-router-devtools": "^1.120.11",
-		"@tanstack/router-plugin": "^1.120.11",
+		"@tanstack/react-router-devtools": "^1.120.13",
+		"@tanstack/router-plugin": "^1.120.13",
 		"@testing-library/dom": "^10.4.0",
 		"@testing-library/react": "^16.3.0",
 		"@types/bun": "^1.2.15",
 		"@types/luxon": "^3.6.2",
-		"@types/node": "^22.15.24",
+		"@types/node": "^22.15.28",
 		"@types/react": "^19.1.6",
 		"@types/react-dom": "^19.1.5",
-		"@typescript/native-preview": "^7.0.0-dev.20250528.1",
+		"@typescript/native-preview": "^7.0.0-dev.20250530.1",
 		"@vitejs/plugin-react": "^4.5.0",
 		"autoprefixer": "^10.4.21",
 		"babel-plugin-react-compiler": "^19.1.0-rc.2",
 		"eslint": "^9.27.0",
 		"jsdom": "^26.1.0",
-		"postcss": "^8.5.3",
+		"postcss": "^8.5.4",
 		"react-scan": "^0.3.4",
 		"tailwindcss": "^4.1.8",
 		"typescript": "^5.8.3",
 		"typescript-eslint": "^8.33.0",
-		"vite": "^6.3.5",
+		"vite": "npm:rolldown-vite@latest",
 		"vite-plugin-checker": "^0.9.3",
 		"vitest": "^3.1.4",
-		"web-vitals": "^5.0.1"
+		"web-vitals": "^5.0.2"
 	},
 	"trustedDependencies": ["@biomejs/biome", "@tailwindcss/oxide"]
 }
