create wrapper around console so it is not executed in production

--- a/frontend/biome.json
+++ b/frontend/biome.json
@@ -30,8 +30,7 @@
 			},
 			"suspicious": {
 				"all": true,
-				"noReactSpecificProps": "off",
-				"noConsole": "off"
+				"noReactSpecificProps": "off"
 			},
 			"style": {
 				"all": true
