--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,14 +18,15 @@
 		"react-dom": "^19.1.0",
 		"react-icons": "^5.5.0",
 		"react-redux": "^9.2.0",
+		"react-stately": "^3.38.0",
 		"uuid": "^11.1.0",
-		"zod": "^3.25.49"
+		"zod": "^3.25.50"
 	},
 	"devDependencies": {
 		"latest": "^0.2.0",
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"@biomejs/biome": "1.9.4",
-		"@eslint-react/eslint-plugin": "^1.50.0",
+		"@eslint-react/eslint-plugin": "^1.51.0",
 		"@eslint/js": "^9.28.0",
 		"@tailwindcss/vite": "^4.1.8",
 		"@tanstack/react-router-devtools": "^1.120.15",
@@ -50,7 +51,7 @@
 		"typescript-eslint": "^8.33.1",
 		"vite": "npm:rolldown-vite@latest",
 		"vite-plugin-checker": "^0.9.3",
-		"vitest": "^3.2.0",
+		"vitest": "^3.2.1",
 		"web-vitals": "^5.0.2"
 	},
 	"trustedDependencies": ["@biomejs/biome", "@tailwindcss/oxide"]
