--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,18 +9,18 @@
 		"test": "vitest run"
 	},
 	"dependencies": {
+		"@internationalized/date": "^3.8.2",
 		"@reduxjs/toolkit": "^2.8.2",
-		"@tanstack/react-router": "^1.120.15",
+		"@tanstack/react-router": "^1.120.16",
 		"immer": "^10.1.1",
-		"luxon": "^3.6.1",
 		"react": "^19.1.0",
-		"react-aria-components": "^1.9.0",
+		"react-aria-components": "^1.10.0",
 		"react-dom": "^19.1.0",
 		"react-icons": "^5.5.0",
 		"react-redux": "^9.2.0",
-		"react-stately": "^3.38.0",
+		"react-stately": "^3.39.0",
 		"uuid": "^11.1.0",
-		"zod": "^3.25.50"
+		"zod": "^3.25.53"
 	},
 	"devDependencies": {
 		"latest": "^0.2.0",
@@ -29,16 +29,16 @@
 		"@eslint-react/eslint-plugin": "^1.51.0",
 		"@eslint/js": "^9.28.0",
 		"@tailwindcss/vite": "^4.1.8",
-		"@tanstack/react-router-devtools": "^1.120.15",
-		"@tanstack/router-plugin": "^1.120.15",
+		"@tanstack/react-router-devtools": "^1.120.16",
+		"@tanstack/router-plugin": "^1.120.16",
 		"@testing-library/dom": "^10.4.0",
 		"@testing-library/react": "^16.3.0",
 		"@types/bun": "^1.2.15",
 		"@types/luxon": "^3.6.2",
-		"@types/node": "^22.15.29",
+		"@types/node": "^22.15.30",
 		"@types/react": "^19.1.6",
-		"@types/react-dom": "^19.1.5",
-		"@typescript/native-preview": "^7.0.0-dev.20250603.1",
+		"@types/react-dom": "^19.1.6",
+		"@typescript/native-preview": "^7.0.0-dev.20250605.1",
 		"@vitejs/plugin-react": "^4.5.1",
 		"autoprefixer": "^10.4.21",
 		"babel-plugin-react-compiler": "^19.1.0-rc.2",
@@ -51,7 +51,7 @@
 		"typescript-eslint": "^8.33.1",
 		"vite": "npm:rolldown-vite@latest",
 		"vite-plugin-checker": "^0.9.3",
-		"vitest": "^3.2.1",
+		"vitest": "^3.2.2",
 		"web-vitals": "^5.0.2"
 	},
 	"trustedDependencies": ["@biomejs/biome", "@tailwindcss/oxide"]
