create a side bar and allow adding new task lists

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,44 +11,45 @@
 	"dependencies": {
 		"@internationalized/date": "^3.8.2",
 		"@reduxjs/toolkit": "^2.8.2",
-		"@tanstack/react-router": "^1.121.2",
+		"@tanstack/react-router": "^1.121.21",
 		"immer": "^10.1.1",
 		"react": "^19.1.0",
+		"react-aria": "^3.41.1",
 		"react-aria-components": "^1.10.1",
 		"react-dom": "^19.1.0",
 		"react-icons": "^5.5.0",
 		"react-redux": "^9.2.0",
 		"uuid": "^11.1.0",
-		"zod": "^3.25.64"
+		"zod": "^3.25.67"
 	},
 	"devDependencies": {
 		"latest": "^0.2.0",
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"@biomejs/biome": "1.9.4",
 		"@eslint-react/eslint-plugin": "^1.52.2",
-		"@eslint/js": "^9.28.0",
+		"@eslint/js": "^9.29.0",
 		"@tailwindcss/vite": "^4.1.10",
-		"@tanstack/react-router-devtools": "^1.121.8",
-		"@tanstack/router-plugin": "^1.121.9",
+		"@tanstack/react-router-devtools": "^1.121.21",
+		"@tanstack/router-plugin": "^1.121.21",
 		"@testing-library/dom": "^10.4.0",
 		"@testing-library/react": "^16.3.0",
 		"@types/bun": "^1.2.16",
 		"@types/luxon": "^3.6.2",
-		"@types/node": "^24.0.1",
+		"@types/node": "^24.0.3",
 		"@types/react": "^19.1.8",
 		"@types/react-dom": "^19.1.6",
-		"@typescript/native-preview": "^7.0.0-dev.20250613.1",
+		"@typescript/native-preview": "^7.0.0-dev.20250616.1",
 		"@vitejs/plugin-react": "^4.5.2",
 		"autoprefixer": "^10.4.21",
 		"babel-plugin-react-compiler": "^19.1.0-rc.2",
-		"eslint": "^9.28.0",
+		"eslint": "^9.29.0",
 		"jsdom": "^26.1.0",
-		"postcss": "^8.5.5",
+		"postcss": "^8.5.6",
 		"react-scan": "^0.3.4",
 		"tailwindcss": "^4.1.10",
 		"typescript": "^5.8.3",
-		"typescript-eslint": "^8.34.0",
-		"vite": "npm:rolldown-vite@^6.3.19",
+		"typescript-eslint": "^8.34.1",
+		"vite": "npm:rolldown-vite@^6.3.21",
 		"vite-plugin-checker": "^0.9.3",
 		"vitest": "^3.2.3",
 		"web-vitals": "^5.0.3"
