checkpoint- tyring to implement sidebar and fix task editing

--- a/frontend/biome.json
+++ b/frontend/biome.json
@@ -1,47 +1,34 @@
 {
-	"$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
-	"vcs": {
-		"enabled": false,
-		"clientKind": "git",
-		"useIgnoreFile": false
-	},
-	"files": {
-		"ignoreUnknown": false,
-		"ignore": ["vite.config.ts", "routeTree.gen.ts", "dist/"]
-	},
-	"formatter": {
-		"enabled": true,
-		"indentStyle": "tab"
-	},
-	"organizeImports": {
-		"enabled": true
-	},
-	"linter": {
-		"enabled": true,
-		"rules": {
-			"correctness": {
-				"all": true
-			},
-			"complexity": {
-				"all": true
-			},
-			"security": {
-				"all": true
-			},
-			"suspicious": {
-				"all": true,
-				"noReactSpecificProps": "off"
-			},
-			"style": {
-				"all": true
-			},
-			"recommended": true
-		}
-	},
-	"javascript": {
-		"globals": ["React"],
-		"formatter": {
-			"quoteStyle": "double"
-		}
-	}
+  "$schema": "https://biomejs.dev/schemas/2.0.0/schema.json",
+  "vcs": {
+    "enabled": false,
+    "clientKind": "git",
+    "useIgnoreFile": false
+  },
+  "files": {
+    "ignoreUnknown": false,
+    "includes": ["src/**", "!**/vite.config.ts", "!**/routeTree.gen.ts"]
+  },
+  "formatter": {
+    "enabled": true,
+    "indentStyle": "space"
+  },
+  "assist": { "actions": { "source": { "organizeImports": "on" } } },
+  "linter": {
+    "enabled": true,
+    "rules": {
+      "recommended": true,
+      "suspicious": {
+        "noConsole": "error"
+      }
+    },
+    "domains": {
+      "react": "all"
+    }
+  },
+  "javascript": {
+    "formatter": {
+      "quoteStyle": "double"
+    }
+  }
 }
