--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
 	"dependencies": {
 		"@internationalized/date": "^3.8.2",
 		"@reduxjs/toolkit": "^2.8.2",
-		"@tanstack/react-router": "^1.127.3",
+		"@tanstack/react-router": "^1.127.8",
 		"immer": "^10.1.1",
 		"react": "^19.1.0",
 		"react-aria": "^3.41.1",
@@ -27,8 +27,8 @@
 		"@eslint-react/eslint-plugin": "^1.52.3",
 		"@eslint/js": "^9.31.0",
 		"@tailwindcss/vite": "^4.1.11",
-		"@tanstack/react-router-devtools": "^1.127.3",
-		"@tanstack/router-plugin": "^1.127.5",
+		"@tanstack/react-router-devtools": "^1.127.8",
+		"@tanstack/router-plugin": "^1.127.8",
 		"@testing-library/dom": "^10.4.0",
 		"@testing-library/react": "^16.3.0",
 		"@types/bun": "^1.2.18",
@@ -43,12 +43,13 @@
 		"eslint": "^9.31.0",
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"jsdom": "^26.1.0",
+		"msw": "^2.10.4",
 		"postcss": "^8.5.6",
 		"react-scan": "^0.4.3",
 		"tailwindcss": "^4.1.11",
 		"typescript": "^5.8.3",
-		"typescript-eslint": "^8.36.0",
-		"vite": "npm:rolldown-vite@^7.0.8",
+		"typescript-eslint": "^8.37.0",
+		"vite": "npm:rolldown-vite@^7.0.9",
 		"vite-plugin-checker": "^0.10.0",
 		"vitest": "^3.2.4",
 		"web-vitals": "^5.0.3"
