--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
 	"dependencies": {
 		"@internationalized/date": "^3.8.2",
 		"@reduxjs/toolkit": "^2.8.2",
-		"@tanstack/react-router": "^1.128.3",
+		"@tanstack/react-router": "^1.128.4",
 		"immer": "^10.1.1",
 		"react": "^19.1.0",
 		"react-aria": "^3.41.1",
@@ -27,17 +27,17 @@
 		"@eslint-react/eslint-plugin": "^1.52.3",
 		"@eslint/js": "^9.31.0",
 		"@tailwindcss/vite": "^4.1.11",
-		"@tanstack/react-router-devtools": "^1.128.3",
-		"@tanstack/router-plugin": "^1.128.3",
+		"@tanstack/react-router-devtools": "^1.128.4",
+		"@tanstack/router-plugin": "^1.128.4",
 		"@testing-library/dom": "^10.4.0",
 		"@testing-library/react": "^16.3.0",
 		"@types/bun": "^1.2.18",
 		"@types/luxon": "^3.6.2",
-		"@types/node": "^24.0.14",
+		"@types/node": "^24.0.15",
 		"@types/react": "^19.1.8",
 		"@types/react-dom": "^19.1.6",
-		"@typescript/native-preview": "^7.0.0-dev.20250716.1",
-		"@vitejs/plugin-react": "^4.6.0",
+		"@typescript/native-preview": "^7.0.0-dev.20250719.1",
+		"@vitejs/plugin-react": "^4.7.0",
 		"autoprefixer": "^10.4.21",
 		"babel-plugin-react-compiler": "^19.1.0-rc.2",
 		"eslint": "^9.31.0",
@@ -47,7 +47,7 @@
 		"postcss": "^8.5.6",
 		"react-scan": "^0.4.3",
 		"tailwindcss": "^4.1.11",
-		"typescript": "^5.9.0-beta",
+		"typescript": "^5.9.0-dev.20250719",
 		"typescript-eslint": "^8.37.0",
 		"vite": "npm:rolldown-vite@^7.0.9",
 		"vite-plugin-checker": "^0.10.0",
