--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,23 +11,23 @@
 	"dependencies": {
 		"@internationalized/date": "^3.8.2",
 		"@reduxjs/toolkit": "^2.8.2",
-		"@tanstack/react-router": "^1.128.6",
+		"@tanstack/react-router": "^1.128.8",
 		"immer": "^10.1.1",
 		"uuid": "^11.1.0",
-		"zod": "^4.0.5"
+		"zod": "^4.0.5",
 		"react-aria-components": "^1.10.1",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
 		"react-icons": "^5.5.0",
-		"react-redux": "^9.2.0",
+		"react-redux": "^9.2.0"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.1.2",
 		"@eslint-react/eslint-plugin": "^1.52.3",
 		"@eslint/js": "^9.31.0",
 		"@tailwindcss/vite": "^4.1.11",
-		"@tanstack/react-router-devtools": "^1.128.6",
-		"@tanstack/router-plugin": "^1.128.6",
+		"@tanstack/react-router-devtools": "^1.128.8",
+		"@tanstack/router-plugin": "^1.128.8",
 		"@testing-library/dom": "^10.4.0",
 		"@testing-library/react": "^16.3.0",
 		"@types/bun": "^1.2.19",
