update packages and remove eslint rules ignroes

--- a/frontend/biome.json
+++ b/frontend/biome.json
@@ -39,6 +39,9 @@
         "noInferrableTypes": "error",
         "useNamingConvention": "warn",
         "useConsistentArrayType": "warn"
+      },
+      "performance": {
+        "noDelete": "error"
       }
     },
     "domains": {
