--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,13 +13,13 @@
 		"@reduxjs/toolkit": "^2.8.2",
 		"@tanstack/react-router": "^1.129.7",
 		"immer": "^10.1.1",
-		"uuid": "^11.1.0",
-		"zod": "^4.0.5",
-		"react-aria-components": "^1.11.0",
 		"react": "^19.1.0",
+		"react-aria-components": "^1.11.0",
 		"react-dom": "^19.1.0",
 		"react-icons": "^5.5.0",
-		"react-redux": "^9.2.0"
+		"react-redux": "^9.2.0",
+		"uuid": "^11.1.0",
+		"zod": "^4.0.5"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.1.2",
