--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
 		"@tanstack/react-router-devtools": "^1.129.7",
 		"@tanstack/router-plugin": "^1.129.7",
 		"@testing-library/dom": "^10.4.0",
+		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/react": "^16.3.0",
 		"@types/bun": "^1.2.19",
 		"@types/luxon": "^3.6.2",
