split up api slice into smaller files

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,52 +1,57 @@
 {
-	"name": "planner-app",
-	"private": true,
-	"type": "module",
-	"scripts": {
-		"start": "vite --port 3000",
-		"build": "vite build && tsc",
-		"serve": "vite preview",
-		"test": "vitest run"
-	},
-	"dependencies": {
-		"@internationalized/date": "^3.8.2",
-		"@reduxjs/toolkit": "^2.8.2",
-		"@tanstack/react-router": "^1.130.1",
-		"immer": "^10.1.1",
-		"react": "^19.1.0",
-		"react-aria-components": "^1.11.0",
-		"react-dom": "^19.1.0",
-		"react-icons": "^5.5.0",
-		"react-redux": "^9.2.0",
-		"uuid": "^11.1.0",
-		"zod": "^4.0.10"
-	},
-	"devDependencies": {
-		"@biomejs/biome": "^2.1.2",
-		"@tailwindcss/vite": "^4.1.11",
-		"@tanstack/react-router-devtools": "^1.130.1",
-		"@tanstack/router-plugin": "^1.130.1",
-		"@testing-library/dom": "^10.4.0",
-		"@testing-library/react": "^16.3.0",
-		"@types/bun": "^1.2.19",
-		"@types/luxon": "^3.6.2",
-		"@types/node": "^24.1.0",
-		"@types/react": "^19.1.8",
-		"@types/react-dom": "^19.1.6",
-		"@typescript/native-preview": "^7.0.0-dev.20250726.1",
-		"@vitejs/plugin-react": "^4.7.0",
-		"autoprefixer": "^10.4.21",
-		"babel-plugin-react-compiler": "^19.1.0-rc.2",
-		"jsdom": "^26.1.0",
-		"msw": "^2.10.4",
-		"postcss": "^8.5.6",
-		"react-scan": "^0.4.3",
-		"tailwindcss": "^4.1.11",
-		"typescript": "^5.9.0-dev.20250726",
-		"vite": "npm:rolldown-vite@^7.0.11",
-		"vite-plugin-checker": "^0.10.1",
-		"vitest": "^3.2.4",
-		"web-vitals": "^5.0.3"
-	},
-	"trustedDependencies": ["@biomejs/biome", "@tailwindcss/oxide"]
+  "name": "planner-app",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "start": "vite --port 3000",
+    "build": "vite build && tsc",
+    "analyze": "vite build --mode analyze",
+    "serve": "vite preview",
+    "test": "vitest run"
+  },
+  "dependencies": {
+    "@internationalized/date": "^3.8.2",
+    "@reduxjs/toolkit": "^2.8.2",
+    "@tanstack/react-router": "^1.130.1",
+    "immer": "^10.1.1",
+    "react": "^19.1.0",
+    "react-aria-components": "^1.11.0",
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
+    "uuid": "^11.1.0",
+    "zod": "^4.0.10"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "^2.1.2",
+    "@tailwindcss/vite": "^4.1.11",
+    "@tanstack/react-router-devtools": "^1.130.1",
+    "@tanstack/router-plugin": "^1.130.1",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/react": "^16.3.0",
+    "@types/bun": "^1.2.19",
+    "@types/luxon": "^3.6.2",
+    "@types/node": "^24.1.0",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "@typescript/native-preview": "^7.0.0-dev.20250727.1",
+    "@vitejs/plugin-react": "^4.7.0",
+    "autoprefixer": "^10.4.21",
+    "babel-plugin-react-compiler": "^19.1.0-rc.2",
+    "jsdom": "^26.1.0",
+    "msw": "^2.10.4",
+    "postcss": "^8.5.6",
+    "react-scan": "^0.4.3",
+    "rollup-plugin-visualizer": "^6.0.3",
+    "tailwindcss": "^4.1.11",
+    "typescript": "^5.9.0-dev.20250727",
+    "vite": "npm:rolldown-vite@^7.0.11",
+    "vite-plugin-checker": "^0.10.1",
+    "vitest": "^3.2.4",
+    "web-vitals": "^5.0.3"
+  },
+  "trustedDependencies": [
+    "@biomejs/biome",
+    "@tailwindcss/oxide"
+  ]
 }
