--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,10 +42,12 @@
     "msw": "^2.10.4",
     "postcss": "^8.5.6",
     "react-scan": "^0.4.3",
+    "rollup-plugin-ignore": "^1.0.10",
     "rollup-plugin-visualizer": "^6.0.3",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.9.0-dev.20250727",
     "vite": "npm:rolldown-vite@^7.0.11",
+    "vite-plugin-babel": "^1.3.2",
     "vite-plugin-checker": "^0.10.1",
     "vitest": "^3.2.4",
     "web-vitals": "^5.0.3"
