--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
     "tailwindcss": "^4.1.11",
     "typescript": "^5.9.0-dev.20250727",
     "vite": "npm:rolldown-vite@^7.0.11",
+    "vite-bundle-analyzer": "^1.1.0",
     "vite-plugin-babel": "^1.3.2",
     "vite-plugin-checker": "^0.10.1",
     "vitest": "^3.2.4",
