--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,8 +3,9 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "vite --port 3000",
+    "dev": "vite --port 3000",
     "build": "vite build && tsc",
+    "biome": "bunx biome check",
     "analyze": "vite build --mode analyze",
     "serve": "vite preview",
     "test": "vitest run"
@@ -20,36 +21,29 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "uuid": "^11.1.0",
-    "zod": "^4.0.11"
+    "zod": "^4.0.13"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.1.2",
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-router-devtools": "^1.130.2",
     "@tanstack/router-plugin": "^1.130.2",
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/react": "^16.3.0",
     "@types/bun": "^1.2.19",
-    "@types/luxon": "^3.7.0",
     "@types/node": "^24.1.0",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
     "@typescript/native-preview": "^7.0.0-dev.20250728.1",
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.21",
     "babel-plugin-react-compiler": "^19.1.0-rc.2",
-    "jsdom": "^26.1.0",
-    "msw": "^2.10.4",
-    "postcss": "^8.5.6",
     "react-scan": "^0.4.3",
-    "rollup-plugin-ignore": "^1.0.10",
     "rollup-plugin-visualizer": "^6.0.3",
     "tailwindcss": "^4.1.11",
-    "typescript": "^5.9.0-dev.20250728",
+    "typescript": "^5.9.0-dev.20250729",
     "vite": "npm:rolldown-vite@^7.0.11",
     "vite-bundle-analyzer": "^1.1.0",
     "vite-plugin-babel": "^1.3.2",
-    "vite-plugin-checker": "^0.10.1",
+    "vite-plugin-checker": "^0.10.2",
     "vitest": "^3.2.4",
     "web-vitals": "^5.0.3"
   },
