--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@internationalized/date": "^3.8.2",
     "@reduxjs/toolkit": "^2.8.2",
-    "@tanstack/react-router": "^1.130.9",
+    "@tanstack/react-router": "^1.130.12",
     "immer": "^10.1.1",
     "react": "^19.1.1",
     "react-aria-components": "^1.11.0",
@@ -26,26 +26,26 @@
   "devDependencies": {
     "@biomejs/biome": "^2.1.3",
     "@tailwindcss/vite": "^4.1.11",
-    "@tanstack/react-router-devtools": "^1.130.9",
-    "@tanstack/router-plugin": "^1.130.9",
+    "@tanstack/react-router-devtools": "^1.130.13",
+    "@tanstack/router-plugin": "^1.130.15",
     "@types/bun": "^1.2.19",
     "@types/node": "^24.1.0",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
-    "@typescript/native-preview": "^7.0.0-dev.20250730.1",
+    "@typescript/native-preview": "^7.0.0-dev.20250802.1",
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.21",
     "babel-plugin-react-compiler": "^19.1.0-rc.2",
     "react-scan": "^0.4.3",
     "rollup-plugin-visualizer": "^6.0.3",
     "tailwindcss": "^4.1.11",
-    "typescript": "^5.9.0-dev.20250730",
+    "typescript": "^5.9.2",
     "vite": "npm:rolldown-vite@^7.0.12",
     "vite-bundle-analyzer": "^1.1.0",
     "vite-plugin-babel": "^1.3.2",
     "vite-plugin-checker": "^0.10.2",
     "vitest": "^3.2.4",
-    "web-vitals": "^5.0.3"
+    "web-vitals": "^5.1.0"
   },
   "trustedDependencies": [
     "@biomejs/biome",
