--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
+    "tailwindcss-react-aria-components": "^2.0.0",
     "uuid": "^11.1.0",
     "zod": "^4.0.14"
   },
