remove unrelsolved iports and add no  implicit coesrion to biome rules

--- a/frontend/biome.json
+++ b/frontend/biome.json
@@ -23,7 +23,7 @@
         "noEmptyBlockStatements": "warn"
       },
       "nursery": {
-        "noUnresolvedImports": "off",
+        "noImplicitCoercion": "warn",
         "noFloatingPromises": "error",
         "useExhaustiveSwitchCases": "error",
         "useUnifiedTypeSignature": "error",
