--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "vite --port 3000",
     "build": "vite build && tsc",
-    "biome": "bunx biome check",
+    "check": "bunx biome check",
     "analyze": "bunx vite-bundle-analyzer",
     "serve": "vite preview",
     "test": "vitest run"
@@ -13,7 +13,7 @@
   "dependencies": {
     "@internationalized/date": "^3.8.2",
     "@reduxjs/toolkit": "^2.8.2",
-    "@tanstack/react-router": "^1.130.12",
+    "@tanstack/react-router": "^1.131.2",
     "immer": "^10.1.1",
     "react": "^19.1.1",
     "react-aria-components": "^1.11.0",
@@ -22,27 +22,28 @@
     "react-redux": "^9.2.0",
     "tailwindcss-react-aria-components": "^2.0.0",
     "uuid": "^11.1.0",
-    "zod": "^4.0.14"
+    "zod": "^4.0.17"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.1.3",
+    "@biomejs/biome": "^2.1.4",
     "@tailwindcss/vite": "^4.1.11",
-    "@tanstack/react-router-devtools": "^1.130.13",
-    "@tanstack/router-plugin": "^1.130.15",
+    "@tanstack/react-router-devtools": "^1.131.2",
+    "@tanstack/router-plugin": "^1.131.2",
     "@types/bun": "^1.2.19",
-    "@types/node": "^24.2.0",
+    "@types/node": "^24.2.1",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
-    "@typescript/native-preview": "^7.0.0-dev.20250805.1",
-    "@vitejs/plugin-react": "^4.7.0",
+    "@typescript/native-preview": "^7.0.0-dev.20250810.1",
+    "@vitejs/plugin-react": "^5.0.0",
+    "@vitejs/plugin-react-swc": "^4.0.0",
     "autoprefixer": "^10.4.21",
     "babel-plugin-react-compiler": "^19.1.0-rc.2",
     "react-scan": "^0.4.3",
     "rollup-plugin-visualizer": "^6.0.3",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.9.2",
-    "vite": "npm:rolldown-vite@^7.0.12",
-    "vite-bundle-analyzer": "^1.1.0",
+    "vite": "^7.1.1",
+    "vite-bundle-analyzer": "^1.2.1",
     "vite-plugin-babel": "^1.3.2",
     "vite-plugin-checker": "^0.10.2",
     "vitest": "^3.2.4",
