--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@internationalized/date": "^3.8.2",
     "@reduxjs/toolkit": "^2.8.2",
-    "@tanstack/react-router": "^1.131.2",
+    "@tanstack/react-router": "^1.131.8",
     "immer": "^10.1.1",
     "react": "^19.1.1",
     "react-aria-components": "^1.11.0",
@@ -27,13 +27,13 @@
   "devDependencies": {
     "@biomejs/biome": "^2.1.4",
     "@tailwindcss/vite": "^4.1.11",
-    "@tanstack/react-router-devtools": "^1.131.2",
-    "@tanstack/router-plugin": "^1.131.2",
-    "@types/bun": "^1.2.19",
+    "@tanstack/react-router-devtools": "^1.131.8",
+    "@tanstack/router-plugin": "^1.131.8",
+    "@types/bun": "^1.2.20",
     "@types/node": "^24.2.1",
-    "@types/react": "^19.1.9",
+    "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
-    "@typescript/native-preview": "^7.0.0-dev.20250810.1",
+    "@typescript/native-preview": "^7.0.0-dev.20250813.1",
     "@vitejs/plugin-react": "^5.0.0",
     "@vitejs/plugin-react-swc": "^4.0.0",
     "autoprefixer": "^10.4.21",
@@ -42,7 +42,7 @@
     "rollup-plugin-visualizer": "^6.0.3",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.9.2",
-    "vite": "^7.1.1",
+    "vite": "npm:rolldown-vite@latest",
     "vite-bundle-analyzer": "^1.2.1",
     "vite-plugin-babel": "^1.3.2",
     "vite-plugin-checker": "^0.10.2",
